player/androidPlayer/androidPlayer/androidPlayer.NativeActivity/ARM/Debug/androidPlayer.NativeActivity.log
  ANDROID_HOME=C:\Program Files (x86)\Android\android-sdk
  ANT_HOME=C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Apps\apache-ant-1.9.3
  JAVA_HOME=C:\Program Files\Java\jdk1.8.0_152
  NDK_ROOT=C:\ProgramData\Microsoft\AndroidNDK64\android-ndk-r13b
  player.cpp
  In file included from ..\..\..\player.cpp:5:
  In file included from ..\..\../player.h:6:
  In file included from C:\repos\rev\engine\src\graphics/driver/openGL/GraphicsDriverOpenGL.h:7:
  In file included from C:\repos\rev\engine\src\graphics/driver/openGL/android/GraphicsDriverOpenGLAndroid.h:9:
  In file included from C:\repos\rev\engine\src\math/algebra/vector.h:11:
C:\repos\rev\engine\src\math/algebra/matrix.h(191,16): error : use of undeclared identifier 'coefficient'
                                          result += coefficient(i)*_other.coefficient(i);
                                                    ^
C:\repos\rev\engine\src\math/algebra/matrix.h(195,96): error : 'this' cannot be implicitly captured in this context
                          Derived abs                     () const { return cwiseUnaryOperator(*this,[](Element& dst, Element x){ dst = abs(x); }); }
                                                                                                                                        ^
C:\repos\rev\engine\src\math/algebra/matrix.h(215,7): error : use of undeclared 'operator()'
                                          &operator()(i,j)
                                           ^
C:\repos\rev\engine\src\math/algebra/matrix.h(258,4): error : missing 'typename' prior to dependent type name 'Matrix_::Derived'
                          Matrix_::Derived result;
                          ^~~~~~~~~~~~~~~~
                          typename 
C:\repos\rev\engine\src\math/algebra/matrix.h(277,4): error : missing 'typename' prior to dependent type name 'MatrixA_::Derived'
                          MatrixA_::Derived result;
                          ^~~~~~~~~~~~~~~~~
                          typename 
C:\repos\rev\engine\src\math/algebra/matrix.h(320,47): error : expected a qualified name after 'typename'
                          return cwiseUnaryOperator(_a, [=](typename T& res, typename T a) { res = a*_k; });
                                                                     ^
C:\repos\rev\engine\src\math/algebra/matrix.h(320,64): error : expected a qualified name after 'typename'
                          return cwiseUnaryOperator(_a, [=](typename T& res, typename T a) { res = a*_k; });
                                                                                      ^
C:\repos\rev\engine\src\math/algebra/matrix.h(378,19): error : use of undeclared identifier 'cols'; did you mean 'cols_'?
                                  static_assert(cols==1||rows==1, "This constructor is for vectors only");
                                                ^~~~
                                                cols_
  C:\repos\rev\engine\src\math/algebra/matrix.h(334,43) :  note: 'cols_' declared here
                  template<class T_, size_t rows_, size_t cols_, bool col_major_ = true>
                                                          ^
C:\repos\rev\engine\src\math/algebra/matrix.h(378,28): error : use of undeclared identifier 'rows'; did you mean 'rows_'?
                                  static_assert(cols==1||rows==1, "This constructor is for vectors only");
                                                         ^~~~
                                                         rows_
  C:\repos\rev\engine\src\math/algebra/matrix.h(334,29) :  note: 'rows_' declared here
                  template<class T_, size_t rows_, size_t cols_, bool col_major_ = true>
                                            ^
C:\repos\rev\engine\src\math/algebra/matrix.h(379,19): error : use of undeclared identifier 'cols'; did you mean 'cols_'?
                                  static_assert(cols>=2||rows>=2, "Vector is not big enough");
                                                ^~~~
                                                cols_
  C:\repos\rev\engine\src\math/algebra/matrix.h(334,43) :  note: 'cols_' declared here
                  template<class T_, size_t rows_, size_t cols_, bool col_major_ = true>
                                                          ^
C:\repos\rev\engine\src\math/algebra/matrix.h(379,28): error : use of undeclared identifier 'rows'; did you mean 'rows_'?
                                  static_assert(cols>=2||rows>=2, "Vector is not big enough");
                                                         ^~~~
                                                         rows_
  C:\repos\rev\engine\src\math/algebra/matrix.h(334,29) :  note: 'rows_' declared here
                  template<class T_, size_t rows_, size_t cols_, bool col_major_ = true>
                                            ^
C:\repos\rev\engine\src\math/algebra/matrix.h(385,19): error : use of undeclared identifier 'cols'; did you mean 'cols_'?
                                  static_assert(cols==1||rows==1, "This constructor is for vectors only");
                                                ^~~~
                                                cols_
  C:\repos\rev\engine\src\math/algebra/matrix.h(334,43) :  note: 'cols_' declared here
                  template<class T_, size_t rows_, size_t cols_, bool col_major_ = true>
                                                          ^
C:\repos\rev\engine\src\math/algebra/matrix.h(385,28): error : use of undeclared identifier 'rows'; did you mean 'rows_'?
                                  static_assert(cols==1||rows==1, "This constructor is for vectors only");
                                                         ^~~~
                                                         rows_
  C:\repos\rev\engine\src\math/algebra/matrix.h(334,29) :  note: 'rows_' declared here
                  template<class T_, size_t rows_, size_t cols_, bool col_major_ = true>
                                            ^
C:\repos\rev\engine\src\math/algebra/matrix.h(386,19): error : use of undeclared identifier 'cols'; did you mean 'cols_'?
                                  static_assert(cols>=3||rows>=3, "Vector is not big enough");
                                                ^~~~
                                                cols_
  C:\repos\rev\engine\src\math/algebra/matrix.h(334,43) :  note: 'cols_' declared here
                  template<class T_, size_t rows_, size_t cols_, bool col_major_ = true>
                                                          ^
C:\repos\rev\engine\src\math/algebra/matrix.h(386,28): error : use of undeclared identifier 'rows'; did you mean 'rows_'?
                                  static_assert(cols>=3||rows>=3, "Vector is not big enough");
                                                         ^~~~
                                                         rows_
  C:\repos\rev\engine\src\math/algebra/matrix.h(334,29) :  note: 'rows_' declared here
                  template<class T_, size_t rows_, size_t cols_, bool col_major_ = true>
                                            ^
C:\repos\rev\engine\src\math/algebra/matrix.h(400,18): error : expected a qualified name after 'typename'
                          ) -> typename Matrix<typename S1_::Element,m_,l_,S1_::is_col_major>
                                        ^
  16 errors generated.
